--- a/assets/style.css
+++ b/assets/style.css
@@ -8,7 +8,7 @@ text-align: center;
 
 .header {
     display: grid;
-    background-color: 74AEBA;
+    background-color: #74AEBA;
     grid-column: 1/4;
     text-align: center;
     align-items: center;
@@ -16,7 +16,7 @@ text-align: center;
 
 .main {
     display: grid;
-    background-color: B6DCDD;
+    background-color: #B6DCDD;
    grid-template-rows: 1.5fr 1fr;
 }
 
@@ -26,16 +26,16 @@ text-align: center;
 }
 
 .sidebar {
-    background-color:	507C7B;
+    background-color:	#507C7B;
 }
 
 .footer {
 display: grid;
-grid-template-columns: repeat(4,1fr);
+grid-template-columns: repeat (4, 1fr);
 grid-column-gap: 30px;
 justify-content: space-between;
 align-items:center;
-background-color:	B6E3D4;
+background-color:	#B6E3D4;
 grid-column: 1 /4;
 padding: 0 20px;
 }
@@ -52,7 +52,7 @@ padding: 0 20px 20px 2px;
     display: grid;
     align-items:center;
     height: 80px;
-    background-color:	679385;
+    background-color:	#679385;
     font-size: 25px;
     font-weight: 700;
 }
@@ -75,7 +75,7 @@ grid-column: 1/3;
     align-items: center;
     height: 70%;
     text-align: center;
-    background-color:	6FAD98;
+    background-color:	#6FAD98;
     font-size: 25px;
     font-weight: 700;
 }
